--- a/gb/22/11/22/n13870793.md
+++ b/gb/22/11/22/n13870793.md
@@ -17,45 +17,36 @@
 <p>本次是YooA自2020年以个人首张迷你专辑《Bon Voyage》Solo出道以来，第二度摘得音乐节目的冠军。她在2020年9月15日于《THE SHOW》摘得首座音乐节目冠军时，OH MY GIRL的队长<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%95%88%E5%AE%9A.md#1">效定</a>也曾到场为YooA加油，并上台给她拥抱。而YooA本日以第二张个人专辑的主打歌再度获得冠军，仍有OH MY GIRL的胜熙相伴，粉丝们除了祝贺YooA夺冠，也为成员们的好感情而欣喜。</p>
 <p>责任编辑：辛幼安</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/20/9/12/n12398799.md#1">YooA《Bon Voyage》音源榜夺冠 MV破千万浏览</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/20/9/15/n12404868.md#1">YooA摘个人首座冠军 效定奔舞台给拥抱帮伴舞</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/5/n13696815.md#1">OH MY GIRL成员YooA染疫后有后遗症 暂停活动</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/14/n13865596.md#1">YooA于《Selfish》舞蹈倾注活力 盼听众开心</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/9/n10899776.md#1" target="_blank">林辉：姚依林回忆“一二九运动”证实三件事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/5/n11501516.md#1" target="_blank">欧洲千人法会 西方法轮功学员谈修炼感悟</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/12/26/n9993508.md#1" target="_blank">爱德华：中共从道德上彻底摧毁中国人</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/10/7/22/n2973029.md#1" target="_blank">千百度：是谁让他们沦为了残酷迫害中国人民的凶手？</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042367.md#1">港作家叹大陆出不了这三人 最欣赏倪匡气节</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040949.md#1">【未解之谜】特异功能大师 李有甫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040988.md#1">女子过世时灵魂变光球离体 几天前曾见天使</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/21/n14038991.md#1">中国哲学思想的智慧：虚室生白 吉祥自来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14035789.md#1">南希?里根的最佳角色（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044215.md#1">【还原真相】共军首席AI专家冯旸赫的“七一之殇”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044293.md#1">【新闻五人行】火箭军被一锅端 习军权或不稳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044635.md#1">【时事军事】中共为俄开后门 居心不在援俄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044167.md#1">中美对抗之下美国签证与移民的变数（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043888.md#1">【菁英论坛】北京上海同出大事 中共气数将尽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044059.md#1">栗战书之女任香港太平绅士 几度卷入负面传闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043525.md#1">传杨紫琼已嫁前法拉利总裁 友人曝在瑞士完婚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14043248.md#1">林嘉欣宣布离婚 与导演袁剑伟结束12年婚姻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044530.md#1">杨紫琼认嫁富商尚?陶德 甜晒合照分享喜讯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043840.md#1">因病三度暂停演唱会 容祖儿：每天忐忑不安</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14043211.md#1">周星驰IG秀画功 徒手画偶像李小龙肖像获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040401.md#1">为何午餐后昏昏欲睡？试试这5个醒脑技巧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/9/n14031083.md#1">薄荷治头痛、恶心、便秘 效果媲美5种常用药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040934.md#1">西方人也在积极尝试 你所不知道的7个针灸妙用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/21/n14039667.md#1">防感染夺命菌?毒物专家：夏季存食物应避开这温度</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14042649.md#1">滥用阿司匹林使老年人患贫血风险增加20%</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105073.md#1">【时事金扫描】传普京心脏病发 俄辟谣被打假</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105062.md#1">【马克时空】美军增兵中东 第四代战机宝刀不老</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104204.md#1">破产3年尚积欠6千万 澎恰恰回首导演梦谈心境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/22/n13870793.htm">YooA摘《THE SHOW》冠军 胜熙献祝贺与鼓励</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/11/22/n13870793.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
